# firecrawl-routing-proxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  ENV_CONTRACT_DRAFT.md  README.md  compose.yaml  justfile  pyproject.toml
.github/workflows/: publish-ghcr.yml
app/: budget.py  config.py  logging_utils.py  main.py  models.py  routing.py  scrape.py
app/providers/: __init__.py  firecrawl_response.py  searxng.py  tavily.py
searxng/: Dockerfile  entrypoint.sh  settings.yml
tests/: test_budget_logic.py  test_citation_normalization.py  test_firecrawl_schema.py  test_health.py  test_routing_decisions.py  test_scrape_endpoint.py
